--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,22 @@
----
-name: P2P-Transmission
-version: 0.05
+--- #YAML:1.0
+name:               P2P-Transmission
+version:            0.06
+abstract:           Interface to the Transmission BitTorrent client
 author:
-  - Brandon Gilmore <brandon@mg2.org>
-abstract: Perl interface to the Transmission BitTorrent client
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
+    - Brandon Gilmore <brandon@mg2.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-  JSON: 2
-  MIME::Base64: 3
-  LWP::UserAgent: 2
-build_requires:
-  Test::More: 0
-provides:
-  P2P::Transmission:
-    file: lib/P2P/Transmission.pm
-    version: 0.05
-  P2P::Transmission::Torrent:
-    file: lib/P2P/Transmission/Torrent.pm
-    version: 0.05
-generated_by: vim
+    JSON:            2
+    LWP::UserAgent:  2
+    MIME::Base64:    3
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
